# ros2-robotic-arm-moveit2

./: readme
robot_arm/: .cproject  .mxproject  robot_arm Debug.launch  robot_arm.ioc
robot_arm/Core/Inc/: as5600.h  dynamixel.h  i2c.h  main.h  stm32f4xx_it.h  tim.h
robot_arm/Core/Src/: as5600.c  dynamixel.c  freertos.c  main.c  stm32f4xx_it.c  tim.c  usart.c
robot_arm/Debug/: makefile  objects.list  robot_arm.elf  robot_arm.list  robot_arm.map
robot_arm/Debug/Core/Src/: as5600.cyclo  as5600.d  as5600.su  dma.d  freertos.cyclo  freertos.d  freertos.su  gpio.d  i2c.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  tim.cyclo  tim.d  tim.su  usart.d  usart.su
ws_moveit/: frames_2025-09-25_15.01.29.gv  setup.sh
ws_moveit/hello_moveit/: CMakeLists.txt  package.xml
ws_moveit/hello_moveit/src/: hello_moveit.cpp
ws_moveit/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_moveit/log/: latest_build
ws_moveit/mtc_tutorial/: CMakeLists.txt  package.xml
ws_moveit/src/arm_bridge/: CMakeLists.txt  package.xml
ws_moveit/src/arm_hardware/: CMakeLists.txt  package.xml
ws_moveit/src/arm_hardware/src/: .arm_bridge.cpp.swp  action_to_topic_bridge.py  arm_bridge.cpp
ws_moveit/src/basic_arm2_description/: CMakeLists.txt  package.xml
ws_moveit/src/basic_arm2_description/launch/: controller.launch  (+4 more)
ws_moveit/src/basic_arm2_moveit_config/: .setup_assistant  CMakeLists.txt
ws_moveit/src/dummy_arm2_description/: CMakeLists.txt
ws_moveit/src/ensamble_description/: CMakeLists.txt
ws_moveit/src/ensamble_description/launch/: display.launch.py
ws_moveit/src/ensamble_description/meshes/: grip_2_1.stl  joint_4_1.stl
ws_moveit/src/ensamble_description/urdf/: ensamble.trans
ws_moveit/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_moveit/src/log/: latest_build
ws_moveit/src/moveit_microros_bridge/: CMakeLists.txt  package.xml
ws_moveit/src/my_bridge/: joint_states_to_delta_int.py  package.xml  setup.py
ws_moveit/src/robotarm_description/: package.xml
ws_moveit/src/robotarm_description /: CMakeLists.txt
ws_moveit/src/robotarm_hardware/: CMakeLists.txt  package.xml  robotarm_hardware.xml
ws_moveit/src/robotarm_hardware/include/robotarm_hardware/: robotarm_hardware.hpp
ws_moveit/src/robotarm_hardware/src/: robotarm_hardware.cpp
ws_moveit/src/robotarm_moveit_config/: .setup_assistant  package.xml
(+182 files in other folders)
