<?xml version="1.0"?>
<package format="3">
  <name>robotarm_hardware</name>
  <version>0.0.1</version>
  <description>Hardware interface for robot arm controlled from MoveIt.</description>

  <maintainer email="mmartinezhu@unal.edu.co">manuel</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- export-time dependencies -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- runtime deps -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
